Cluster2/guestbook/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: guestbook
  labels:
    app: guestbook
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook
