Cluster2/guestbook/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: guestbook
  labels:
    app: redis
    role: master
spec:
  ports:
  - port: 6379
    targetPort: redis
    name: redis
  selector:
    app: redis
    role: master
