Cluster2/guestbook/guestbook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook
  namespace: guestbook
  labels:
    app: guestbook
spec:
  to:
    kind: Service
    name: guestbook
  port:
    targetPort: 3000
